--- a/index.html
+++ b/index.html
@@ -20,32 +20,24 @@
   <div class="container-fluid">
     <div x-data="indicadores" >
       <section id="capa-section">
-          <div class="row mt-2">
-            <div class="col-12 col-md-6">
-              <div class="input-group mb-4">
+          <div class="row my-2">
+            <div class="col-12">
+              <div class="input-group">
                 <span class="input-group-text">🔍</span>
                 <div class="form-floating">
-                  <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Buscar por Indicador..."
+                  <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Buscar por palabra..."
                     x-model="query">
-                  <label for="floatingInputGroup1">Buscar por indicador </label>
+                  <label for="floatingInputGroup1">Buscar por palabra </label>
                 </div>
               </div>
             </div>
-            <div class="col-12 offset-0 offset-md-4 col-md-2">
-              <label for="pageSizeSelect" class="form-label fw-medium mb-0 fs-7">Elementos por página:</label>
-              <select class="form-select w-75" id="pageSizeSelect" x-model.number="page.pageSize" @change="page.currentPage = 1">
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="20">20</option>
-                <option value="50">50</option>
-              </select>
-            </div>
+
           </div>
           
           <!-- Filtros -->
-          <div class="row">
-            <div class="col d-flex flex-column flex-wrap mb-4">
-              <span class="me-2 align-self-center fw-medium">Tipo:</span>
+          <div class="row" >
+            <div class="col d-flex flex-column flex-wrap">
+              <span class="me-2 align-self-start fw-medium">Tipo:</span>
               <select id="select-type" x-model="filters.type" @change="onChangeFilterType" name="type[]" multiple placeholder="Seleccione un Tipo..." autocomplete="off">
                 <option disabled>Seleccione un Tipo...</option>  
                 <option value="Mapa">Mapa</option>
@@ -53,15 +45,15 @@
                 <option value="Indicador">Indicador</option>
               </select>
             </div>
-            <div class="col d-flex flex-column flex-wrap mb-4">
-              <span class="me-2 align-self-center fw-medium">Capítulo:</span>
+            <div class="col d-flex flex-column flex-wrap">
+              <span class="me-2 align-self-start fw-medium">Capítulo:</span>
               <select id="select-chapter" x-model="filters.chapter" name="chapter[]" multiple placeholder="Seleccione un Capítulo..." autocomplete="off">
                 <option disabled>Seleccione un Capítulo...</option>  
                 <option value="Economía Circular">Economía Circular</option>
               </select>
             </div>
-            <div class="col d-flex flex-column flex-wrap mb-4">
-              <span class="me-2 align-self-center fw-medium">Etiquetas:</span>
+            <div class="col d-flex flex-column flex-wrap">
+              <span class="me-2 align-self-start fw-medium">Etiquetas:</span>
               <select id="select-tags" x-model="filters.tags" name="tags[]" multiple placeholder="Seleccione una Etiqueta..." autocomplete="off">
                 <option disabled>Seleccione una Etiqueta...</option>  
                 <option value="Clave">Clave</option>
@@ -72,47 +64,36 @@
             </div>
           </div>
 
+          <div class="my-2" >
+            <div class="d-flex flex-column justify-content-end">
+              <label for="pageSizeSelect" class="form-label fw-medium mb-0 fs-7 align-self-end">Elementos por página</label>
+              <select class="form-select w-75 mn-w75 align-self-end" style="max-width: 128px;" id="pageSizeSelect" x-model.number="page.pageSize" @change="page.currentPage = 1">
+                <option value="10">10</option>
+                <option value="15">15</option>
+                <option value="20">20</option>
+                <option value="50">50</option>
+              </select>
+            </div>
+
+          </div>
+
           <div class="row gy-4" id="indicadores-lista">
             <template x-for="(item, k) in filteredItems.slice((page.currentPage - 1) * page.pageSize, page.currentPage * page.pageSize)" :key="`indicador_panel_${k}`">
               <div class="col-12 d-flex">
                 <div class="card h-100 w-100 bg-light border-secondary">
                   <div class="card-body d-flex flex-column">
-                      <div class="row justify-content-between">
-                        <h5 class="card-title col-10" x-text="item.Nombre"></h5>
-                        <a href="#" class="col-auto btn btn-success h-min" @click="onClickIndicador(item)"><i class="bi bi-box-arrow-up-right"></i> Ver</a>
-                      </div>
-                        <div class="">
-                          <div class="row">
-                            <div class="col">
-                              <div class="d-flex flex-row">
-                                <span :class="iconMap[item.Capítulo]"></span>
-                                <p x-text="item.Capítulo" class="ms-2 mb-0 fs-7"> </p>
-                              </div>
-                            </div>
-                            <!-- <div class="col">
-                              <div class="d-flex flex-row">
-                                <span :class="iconMap[item.Tipo]"></span>
-                                <p x-text="item.Tipo" class="ms-2 mb-0 fs-7"> </p>
-                              </div>
-                            </div> -->
-                            
+                      <div class="d-flex flex-row justify-content-between">
+                        <div>
+                          <h6 class="card-title col-10" x-text="item.Nombre"></h6>
+                          <div class="d-flex flex-row">
+                            <span :class="iconMap[item.Capítulo]"></span>
+                            <p x-text="item.Capítulo" class="ms-2 mb-0 fs-7"> </p>
                           </div>
-
                         </div>
+                        <a href="#" class="col-auto btn btn-success h-min align-self-center" @click="onClickIndicador(item)"><i class="bi bi-box-arrow-up-right"></i> Ver</a>
+                      </div>
                     </div>
                   </div>
-
-                    <!-- <div class="d-flex flex-row align-items-center">
-                      <span class="bi bi-tags-fill"></span>
-                      <template x-for="(cat, i) in (item.Categoría || '').split(',')" :key="`cat_${i}`">
-                        <span :class="`badge rounded-pill text-bg-${['success','danger','warning','info'][i % 4]} mx-1 my-1`" x-text="cat.trim()"></span>
-                      </template>
-                    </div> -->
-
-                    <!-- <div class="mt-1">
-                      <button type="button" class="btn btn-sm btn-success w-100" @click="onClickIndicador(item)">Ver
-                        Indicador</button>
-                    </div> -->
                   </div>
                 </div>
               </div>
