--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="buscador_rema.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/tom-select@2.4.3/dist/css/tom-select.css" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.bunny.net">
+  <link href="https://fonts.bunny.net/css?family=roboto:100,300,400,500,500i,700,900" rel="stylesheet" />
 </head>
 
 <body>
