--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <script src="https://cdn.jsdelivr.net/npm/tom-select@2.4.3/dist/js/tom-select.complete.min.js"></script>
 
   <script>
-    const EXCEL_URL = '/Buscador de indicadores_11_12_2025.xlsx';
+    const EXCEL_URL = './Buscador de indicadores.xlsx';
 
     async function loadXlsx(url) {
       /* perform network request */
